Změna názvu a stránky

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-title: My New Hugo Site
-baseURL: https://xyz.netlify.com/
+title: Tajemství K-popu a proč se stává čím dál tím víc populárním
+baseURL: https://reverent-einstein-1993a0.netlify.com/
 languageCode: cs-cz
 publishDir: public
 
