--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ title: Tajemství K-popu a proč se stává čím dál tím víc populárním
 baseURL: https://reverent-einstein-1993a0.netlify.com/
 languageCode: cs-cz
 publishDir: public
+googleAnalytics: "UA-1399334873-1"
 
 menu:
   main:
